--- a/public/frontend/css/pages/home.css
+++ b/public/frontend/css/pages/home.css
@@ -485,12 +485,20 @@ table {
   color: #25ba80;
 }
 #home_main .carouselArea {
-  min-width: 100%;
-  height: 300px;
+  width: 100%;
+  padding-top: 44.79166667%;
   margin-bottom: 42px;
   overflow: hidden;
+  position: relative;
 }
-#home_main .carouselArea img {
+#home_main .carouselArea .el-carousel {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+#home_main .carouselArea .el-carousel img {
   width: 100%;
 }
 #home_main .product_nav {
@@ -589,12 +597,6 @@ table {
   margin: 0 0 60px 0;
 }
 @media screen and (max-width: 414px) {
-  #home_main .carouselArea {
-    height: 150px;
-  }
-  #home_main .carouselArea img {
-    width: 100%;
-  }
   #home_main .product_nav {
     width: 100%;
   }
