--- a/public/frontend/css/pages/product.css
+++ b/public/frontend/css/pages/product.css
@@ -485,12 +485,20 @@ table {
   color: #25ba80;
 }
 #product_main .carouselArea {
-  min-width: 100%;
-  height: 300px;
+  width: 100%;
+  padding-top: 44.79166667%;
   margin-bottom: 42px;
   overflow: hidden;
+  position: relative;
 }
-#product_main .carouselArea img {
+#product_main .carouselArea .el-carousel {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+#product_main .carouselArea .el-carousel img {
   width: 100%;
 }
 #product_main .product_list {
@@ -569,12 +577,6 @@ table {
   background-color: #E8E8E8;
 }
 @media screen and (max-width: 414px) {
-  #product_main .carouselArea {
-    height: 150px;
-  }
-  #product_main .carouselArea img {
-    width: 100%;
-  }
   #product_main .product_list {
     text-align: left;
   }
