--- a/public/frontend/less/pages/contact.less
+++ b/public/frontend/less/pages/contact.less
@@ -16,6 +16,11 @@
     height:400px;
     margin:10px auto;
     background:#f2f2f2;
+    overflow:hidden;
+    >p{
+      text-align:center;
+      margin-top:10px;
+    }
     .emailUs,.callUs{
       display:inline-block;
       width:49%;
