--- a/public/frontend/less/pages/product.less
+++ b/public/frontend/less/pages/product.less
@@ -3,12 +3,20 @@
 
 #product_main{
   .carouselArea{
-    min-width: 100%;
-    height: 300px;
+    width: 100%;
+    padding-top: percentage(43/96);
     margin-bottom:42px;
     overflow:hidden;
-    img{
-      width:100%;
+    position:relative;
+    .el-carousel{
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      left: 0;
+      top: 0;
+      img{
+        width:100%;
+      }
     }
   }
   .product_list{
@@ -101,12 +109,12 @@
 //响应式布局
 @media screen and (max-width: 414px) {
   #product_main{
-    .carouselArea {
-      height: 150px;
-      img{
-        width:100%;
-      }
-    }
+    //.carouselArea {
+    //  height: 150px;
+    //  img{
+    //    width:100%;
+    //  }
+    //}
     .product_list{
       text-align:left;
       .category {
