--- a/public/frontend/css/pages/support.css
+++ b/public/frontend/css/pages/support.css
@@ -484,16 +484,6 @@ table {
 .el-loading-spinner .el-loading-text {
   color: #25ba80;
 }
-.clearfix:after {
-  content: ".";
-  display: block;
-  height: 0;
-  clear: both;
-  visibility: hidden;
-}
-.clearfix {
-  zoom: 1;
-}
 input {
   box-sizing: border-box;
 }
@@ -509,56 +499,6 @@ input {
 #support_main .banner-container .img {
   width: 100%;
   height: 100%;
-}
-#support_main .banner-container .search {
-  box-sizing: border-box;
-  width: 561px;
-  height: 167px;
-  opacity: 0.6;
-  background-color: #7d7d7d;
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  padding: 24px 40px;
-}
-#support_main .banner-container .search .title {
-  margin: 0;
-  height: 35px;
-  font-size: 30px;
-  text-align: left;
-  color: #ffffff;
-}
-#support_main .banner-container .search .search-tip {
-  margin-top: 19px;
-  font-size: 16px;
-  text-align: left;
-  color: #ffffff;
-}
-#support_main .banner-container .search .productForm {
-  margin-top: 13px;
-}
-#support_main .banner-container .search .productForm .searchText {
-  float: left;
-  box-sizing: border-box;
-  padding-left: 14px;
-  height: 38px;
-  color: #fff;
-  width: 88%;
-  line-height: 38px;
-  background-color: rgba(2, 0, 0, 0.5);
-  border: 1px solid #ffffff;
-}
-#support_main .banner-container .search .productForm .submit_btn {
-  box-sizing: border-box;
-  float: left;
-  outline: 0;
-  height: 38px;
-  width: 12%;
-  border: 1px solid #fff;
-}
-#support_main .banner-container .search .productForm .submit_btn .searchImg {
-  width: 21px;
-  heigth: 27px;
 }
 #support_main .service-nav {
   display: block;
@@ -621,6 +561,24 @@ input {
   color: #333333;
   margin: 19px 0 12px 0;
 }
+#support_main .module-container .refunds .refunds-form .email,
+#support_main .module-container .refunds .refunds-form .name,
+#support_main .module-container .refunds .refunds-form .order,
+#support_main .module-container .refunds .refunds-form .issue {
+  position: relative;
+}
+#support_main .module-container .refunds .refunds-form .email:after,
+#support_main .module-container .refunds .refunds-form .name:after,
+#support_main .module-container .refunds .refunds-form .order:after,
+#support_main .module-container .refunds .refunds-form .issue:after {
+  content: '*';
+  color: red;
+  position: absolute;
+  top: 50px;
+  right: 10px;
+}
+#support_main .module-container .refunds .refunds-form .email > input,
+#support_main .module-container .refunds .refunds-form .name > input,
 #support_main .module-container .refunds .refunds-form .order > input,
 #support_main .module-container .refunds .refunds-form .issue > input {
   width: 100%;
@@ -629,6 +587,8 @@ input {
   border: 1px solid #ccc;
   padding-left: 13px;
 }
+#support_main .module-container .refunds .refunds-form .email > textarea,
+#support_main .module-container .refunds .refunds-form .name > textarea,
 #support_main .module-container .refunds .refunds-form .order > textarea,
 #support_main .module-container .refunds .refunds-form .issue > textarea {
   box-sizing: border-box;
