--- a/public/frontend/less/pages/contact.less
+++ b/public/frontend/less/pages/contact.less
@@ -2,6 +2,18 @@
 @import "../common/common";
 
 #contact_main{
+  .contactUsImg{
+    padding-top:percentage(5/16);
+    margin-bottom:20px;
+    position:relative;
+    >img{
+      width:100%;
+      height:100%;
+      position:absolute;
+      top:0;
+      left:0;
+    }
+  }
   >h1{
     font-size:40px;
     text-align:center;
@@ -22,16 +34,30 @@
       margin-top:10px;
     }
     .emailUs,.callUs{
+      box-sizing:border-box;
       display:inline-block;
       width:49%;
-      font-size:24px;
-      text-align:center;
-      margin-top:150px;
+      font-size:20px;
+      padding-left:120px;
+      margin-top:100px;
+      .info{
+        >h4{
+          font-size: 22px;
+          color: #000;
+          font-weight: 400;
+          position: relative;
+        }
+        >p{
+          font-size: 14px;
+          color: #666;
+          margin:10px 0 20px 0;
+        }
+      }
       >h4{
-        margin-bottom:20px;
+        margin-bottom:5px;
       }
       >p{
-        font-weight:500;
+        font-size:16px;
       }
     }
   }
