--- a/public/frontend/less/pages/support.less
+++ b/public/frontend/less/pages/support.less
@@ -1,16 +1,6 @@
 @import "../common/reset";
 @import "../common/common";
 
-.clearfix:after {
-  content: ".";
-  display: block;
-  height: 0;
-  clear: both;
-  visibility: hidden;
-}
-.clearfix {
-  zoom: 1;
-}
 input {
   box-sizing: border-box;
 }
@@ -25,58 +15,6 @@ input {
       width: 100%;
       height: 100%;
     }
-    .search {
-      box-sizing: border-box;
-      width: 561px;
-      height: 167px;
-      opacity: 0.6;
-      background-color: #7d7d7d;
-      position: absolute;
-      right: 0;
-      bottom: 0;
-      padding: 24px 40px;
-      .title {
-        margin: 0;
-        height: 35px;
-        font-size: 30px;
-        text-align: left;
-        color: #ffffff;
-      }
-      .search-tip {
-        margin-top: 19px;
-        font-size: 16px;
-        text-align: left;
-        color: #ffffff;
-      }
-      .productForm {
-        margin-top: 13px;
-        .searchText {
-          float: left;
-          box-sizing: border-box;
-          padding-left: 14px;
-          height: 38px;
-          color:#fff;
-          width: 88%;
-          line-height: 38px;
-          background-color: rgba(2,0,0,0.5);
-          border: 1px solid #ffffff;
-        }
-        .submit_btn {
-          box-sizing: border-box;
-          float: left;
-          outline: 0;
-          height: 38px;
-          width: 12%;
-          border:1px solid #fff;
-          .searchImg{
-            width:21px;
-            heigth:27px;
-          }
-        }
-
-      }
-    }
-
   }
   .service-nav {
     display: block;
@@ -139,7 +77,15 @@ input {
           color: #333333;
           margin:19px 0 12px 0;
         }
-        .order,.issue{
+        .email,.name,.order,.issue{
+          position:relative;
+          &:after{
+            content:'*';
+            color:red;
+            position:absolute;
+            top:50px;
+            right:10px;
+          }
           >input{
             width: 100%;
             height: 40px;
