--- a/public/frontend/less/pages/contact.less
+++ b/public/frontend/less/pages/contact.less
@@ -2,6 +2,7 @@
 @import "../common/common";
 
 #contact_main{
+  min-width:1050px;
   .contactUsImg{
     padding-top:percentage(5/16);
     margin-bottom:20px;
