--- a/public/frontend/less/pages/product.less
+++ b/public/frontend/less/pages/product.less
@@ -2,6 +2,7 @@
 @import "../common/common";
 
 #product_main{
+  min-width:1050px;
   .carouselArea{
     width: 100%;
     padding-top: percentage(43/96);
