--- a/public/frontend/less/pages/support.less
+++ b/public/frontend/less/pages/support.less
@@ -5,7 +5,7 @@ input {
   box-sizing: border-box;
 }
 #support_main {
-  width: 1120px;
+  min-width:1050px;
   margin: 0 auto;
   .banner-container {
     position: relative;
