--- a/public/frontend/css/pages/home.css
+++ b/public/frontend/css/pages/home.css
@@ -95,16 +95,17 @@ table {
   display: none;
 }
 #topBar {
-  min-width: 1366px;
+  min-width: 1050px;
   height: 56px;
   position: relative;
 }
 #topBar .topBar_pc .logo {
   width: 48px;
   height: 40px;
+  margin-left: 20%;
   position: absolute;
   top: 8px;
-  left: 310px;
+  left: 0;
 }
 #topBar .topBar_pc .topBar_menu {
   width: 560px;
@@ -275,10 +276,11 @@ table {
 }
 #footer {
   box-sizing: border-box;
-  min-width: 1366px;
+  min-width: 1050px;
   height: 380px;
-  padding: 85px 0 0 130px;
+  padding: 85px 0 0 0;
   background-color: #585858;
+  overflow: hidden;
 }
 #footer .subscribe,
 #footer .about,
@@ -288,6 +290,7 @@ table {
   color: #fff;
   font-size: 12px;
   vertical-align: top;
+  float: left;
 }
 #footer .subscribe > h4,
 #footer .about > h4,
@@ -297,7 +300,9 @@ table {
   margin: 0 0 20px 0;
 }
 #footer .subscribe {
-  width: 32%;
+  box-sizing: border-box;
+  width: 34%;
+  padding-left: 5%;
 }
 #footer .subscribe .email_submit > input {
   width: 277px;
@@ -383,7 +388,8 @@ table {
   color: #fff;
   font-size: 16px;
   text-align: center;
-  margin-top: 20px;
+  clear: both;
+  padding-top: 20px;
 }
 @media screen and (max-width: 414px) {
   #topBar {
@@ -484,6 +490,9 @@ table {
 .el-loading-spinner .el-loading-text {
   color: #25ba80;
 }
+#home_main {
+  min-width: 1050px;
+}
 #home_main .carouselArea {
   width: 100%;
   padding-top: 44.79166667%;
@@ -502,27 +511,20 @@ table {
   width: 100%;
 }
 #home_main .product_nav {
-  width: 1120px;
+  width: 100%;
   margin: 0 auto 40px auto;
+  overflow: hidden;
 }
 #home_main .product_nav .oneProduct_nav {
-  display: inline-block;
-  width: 560px;
-  height: 280px;
-}
-#home_main .product_nav .oneProduct_nav .oneProduct_nav_img,
-#home_main .product_nav .oneProduct_nav .oneProduct_nav_desc {
-  box-sizing: border-box;
-  width: 280px;
-  height: 280px;
-  overflow: hidden;
+  width: 25%;
+  text-align: center;
+  padding-top: 25%;
+  margin: 0 10px;
   float: left;
+  overflow: hidden;
   position: relative;
 }
-#home_main .product_nav .oneProduct_nav .oneProduct_nav_img {
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.15);
-}
-#home_main .product_nav .oneProduct_nav .oneProduct_nav_img > img {
+#home_main .product_nav .oneProduct_nav > img {
   width: 100%;
   height: 100%;
   transition: 2s;
@@ -532,18 +534,12 @@ table {
   /* Safari and Chrome */
   -o-transition: 2s;
   /* Opera */
-}
-#home_main .product_nav .oneProduct_nav .oneProduct_nav_img:hover > img {
-  transform: scale(1.3);
-}
-#home_main .product_nav .oneProduct_nav .oneProduct_nav_desc > h4 {
-  width: 100%;
-  font-size: 18px;
-  text-align: center;
-  transform: translateY(-50%);
-  -webkit-transform: translateY(-50%);
   position: absolute;
-  top: 50%;
+  top: 0;
+  left: 0;
+}
+#home_main .product_nav .oneProduct_nav:hover > img {
+  transform: scale(1.3);
 }
 #home_main .product_sell,
 #home_main .product_recom {
