--- a/public/frontend/css/pages/product_detail.css
+++ b/public/frontend/css/pages/product_detail.css
@@ -95,16 +95,17 @@ table {
   display: none;
 }
 #topBar {
-  min-width: 1366px;
+  min-width: 1050px;
   height: 56px;
   position: relative;
 }
 #topBar .topBar_pc .logo {
   width: 48px;
   height: 40px;
+  margin-left: 20%;
   position: absolute;
   top: 8px;
-  left: 310px;
+  left: 0;
 }
 #topBar .topBar_pc .topBar_menu {
   width: 560px;
@@ -275,10 +276,11 @@ table {
 }
 #footer {
   box-sizing: border-box;
-  min-width: 1366px;
+  min-width: 1050px;
   height: 380px;
-  padding: 85px 0 0 130px;
+  padding: 85px 0 0 0;
   background-color: #585858;
+  overflow: hidden;
 }
 #footer .subscribe,
 #footer .about,
@@ -288,6 +290,7 @@ table {
   color: #fff;
   font-size: 12px;
   vertical-align: top;
+  float: left;
 }
 #footer .subscribe > h4,
 #footer .about > h4,
@@ -297,7 +300,9 @@ table {
   margin: 0 0 20px 0;
 }
 #footer .subscribe {
-  width: 32%;
+  box-sizing: border-box;
+  width: 34%;
+  padding-left: 5%;
 }
 #footer .subscribe .email_submit > input {
   width: 277px;
@@ -383,7 +388,8 @@ table {
   color: #fff;
   font-size: 16px;
   text-align: center;
-  margin-top: 20px;
+  clear: both;
+  padding-top: 20px;
 }
 @media screen and (max-width: 414px) {
   #topBar {
@@ -484,6 +490,9 @@ table {
 .el-loading-spinner .el-loading-text {
   color: #25ba80;
 }
+#product_detail_main {
+  min-width: 1050px;
+}
 #product_detail_main .productShow {
   margin: 0 0 47px 0;
 }
@@ -494,26 +503,39 @@ table {
   vertical-align: top;
 }
 #product_detail_main .productShow .picShow > p {
-  margin: 0 0 10px 0;
+  padding-top: 100%;
+  position: relative;
 }
 #product_detail_main .productShow .picShow > p img {
-  width: 500px;
-  height: 500px;
+  width: 85%;
+  height: 85%;
+  transform: translate(-50%, -50%);
+  -wbkit-transform: translate(-50%, -50%);
+  position: absolute;
+  left: 50%;
+  top: 50%;
 }
 #product_detail_main .productShow .picShow .picShowUl {
   display: inline-block;
+  width: 100%;
 }
 #product_detail_main .productShow .picShow .picShowUl li {
   display: inline-block;
   cursor: pointer;
+  width: 15%;
+  padding-top: 15%;
   margin: 0 10px 0 0;
+  position: relative;
 }
 #product_detail_main .productShow .picShow .picShowUl li:hover {
   border: 1px solid #25ba80;
 }
 #product_detail_main .productShow .picShow .picShowUl li img {
-  width: 80px;
-  height: 80px;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
 }
 #product_detail_main .productShow .picShow .picShowUl li.active {
   border: 1px solid #25ba80;
@@ -580,7 +602,7 @@ table {
   background-color: #25ba80;
 }
 #product_detail_main .productDesc {
-  width: 955px;
+  width: 85%;
   margin: 0 auto;
   background: #fff;
 }
