--- a/public/frontend/less/pages/home.less
+++ b/public/frontend/less/pages/home.less
@@ -2,6 +2,7 @@
 @import "../common/common";
 
 #home_main{
+  min-width:1050px;
   .carouselArea{
     width: 100%;
     padding-top: percentage(43/96);
@@ -20,46 +21,31 @@
     }
   }
   .product_nav{
-    width:1120px;
+    width:100%;
     margin:0 auto 40px auto;
+    overflow:hidden;
     .oneProduct_nav{
-      display:inline-block;
-      width:560px;
-      height:280px;
-      .oneProduct_nav_img,.oneProduct_nav_desc{
-        box-sizing:border-box;
-        width: 280px;
-        height: 280px;
-        overflow:hidden;
-        float:left;
-        position:relative;
+      width: 25%;
+      text-align:center;
+      padding-top:25%;
+      margin:0 10px;
+      float:left;
+      overflow:hidden;
+      position:relative;
+      >img{
+        width: 100%;
+        height: 100%;
+        transition:2s;
+        -moz-transition:2s; /* Firefox 4 */
+        -webkit-transition:2s; /* Safari and Chrome */
+        -o-transition:2s; /* Opera */
+        position:absolute;
+        top:0;
+        left:0;
       }
-      .oneProduct_nav_img{
-        box-shadow:0 4px 30px rgba(0, 0, 0, 0.15);
+      &:hover{
         >img{
-          width: 100%;
-          height: 100%;
-          transition:2s;
-          -moz-transition:2s; /* Firefox 4 */
-          -webkit-transition:2s; /* Safari and Chrome */
-          -o-transition:2s; /* Opera */
-        }
-        &:hover{
-          >img{
-            transform: scale(1.3);
-          }
-        }
-      }
-      .oneProduct_nav_desc{
-        >h4{
-          width:100%;
-          font-size: 18px;
-          text-align:center;
-          transform: translateY(-50%);
-          -webkit-transform: translateY(-50%);
-          position:absolute;
-          top:50%;
-          //left:50%;
+          transform: scale(1.3);
         }
       }
     }
