--- a/public/frontend/less/pages/product_detail.less
+++ b/public/frontend/less/pages/product_detail.less
@@ -2,32 +2,47 @@
 @import "../common/common";
 
 #product_detail_main {
+  min-width:1050px;
   .productShow {
     margin:0 0 47px 0;
     .picShow {
+      //box-sizing: border-box;
       display: inline-block;
       width: 50%;
       text-align: center;
       vertical-align: top;
       > p {
-        margin: 0 0 10px 0;
+        padding-top:100%;
+        position:relative;
         img {
-          width: 500px;
-          height: 500px;
+          width: 85%;
+          height: 85%;
+          transform: translate(-50%,-50%);
+          -wbkit-transform: translate(-50%,-50%);
+          position: absolute;
+          left:50%;
+          top: 50%;
         }
       }
       .picShowUl {
         display: inline-block;
+        width:100%;
         li {
           display: inline-block;
           cursor:pointer;
+          width:15%;
+          padding-top:15%;
           margin: 0 10px 0 0;
+          position:relative;
           &:hover{
             border:1px solid #25ba80;
           }
           img {
-            width: 80px;
-            height: 80px;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            left:0;
+            top: 0;
           }
         }
         li.active{
@@ -98,7 +113,7 @@
     }
   }
   .productDesc {
-    width: 955px;
+    width: 85%;
     margin: 0 auto;
     background:#fff;
     .productDesc_header {
