--- a/public/frontend/less/pages/product_search.less
+++ b/public/frontend/less/pages/product_search.less
@@ -2,6 +2,7 @@
 @import "../common/common";
 
 #product_search_main {
+  min-width:1050px;
   .product_list {
     text-align: center;
     margin: 30px 0 40px 0;
