--- a/public/frontend/css/pages/register.css
+++ b/public/frontend/css/pages/register.css
@@ -573,7 +573,7 @@ table {
 }
 @media screen and (max-width: 414px) {
   #register_main {
-    min-width: 100%;
+    min-width: auto;
     height: 600px;
   }
   #register_main .register_box {
