--- a/public/frontend/less/pages/product.less
+++ b/public/frontend/less/pages/product.less
@@ -110,12 +110,7 @@
 //响应式布局
 @media screen and (max-width: 414px) {
   #product_main{
-    //.carouselArea {
-    //  height: 150px;
-    //  img{
-    //    width:100%;
-    //  }
-    //}
+    min-width: auto;
     .product_list{
       text-align:left;
       .category {
