--- a/public/frontend/less/pages/product_detail.less
+++ b/public/frontend/less/pages/product_detail.less
@@ -8,9 +8,10 @@
     .picShow {
       //box-sizing: border-box;
       display: inline-block;
-      width: 50%;
+      width: 45%;
       text-align: center;
       vertical-align: top;
+      margin-left:5%;
       > p {
         padding-top:100%;
         position:relative;
@@ -54,6 +55,7 @@
       display: inline-block;
       width: 49%;
       vertical-align: top;
+      margin-top:40px;
       > h3 {
         font-size: 30px;
         color: #333333;
@@ -218,6 +220,7 @@
 //响应式布局
 @media screen and (max-width: 414px) {
   #product_detail_main{
+    min-width:auto;
     .productShow{
       margin:10px 0 47px 0;
       .picShow{
