--- a/public/frontend/less/pages/product_search.less
+++ b/public/frontend/less/pages/product_search.less
@@ -41,6 +41,7 @@
 //响应式布局
 @media screen and (max-width: 414px) {
   #product_search_main{
+    min-width:auto;
     .product_list{
       text-align:left;
       .oneProduct {
