--- a/public/frontend/less/pages/register.less
+++ b/public/frontend/less/pages/register.less
@@ -94,7 +94,7 @@
 //响应式布局
 @media screen and (max-width: 414px) {
   #register_main{
-    min-width: 100%;
+    min-width:auto;
     height: 600px;
     .register_box{
       width:320px;
