--- a/public/frontend/less/pages/support.less
+++ b/public/frontend/less/pages/support.less
@@ -176,6 +176,7 @@ input {
 //响应式布局
 @media screen and (max-width: 414px) {
   #support_main{
+    min-width: 100%;
     width:100%;
     .banner-container{
       height:200px;
