--- a/public/frontend/css/pages/login.css
+++ b/public/frontend/css/pages/login.css
@@ -612,6 +612,7 @@ table {
 }
 @media screen and (max-width: 414px) {
   #login_main {
+    min-width: auto;
     min-width: 100%;
     height: 600px;
   }
