--- a/public/frontend/css/pages/product_detail.css
+++ b/public/frontend/css/pages/product_detail.css
@@ -498,9 +498,10 @@ table {
 }
 #product_detail_main .productShow .picShow {
   display: inline-block;
-  width: 50%;
+  width: 45%;
   text-align: center;
   vertical-align: top;
+  margin-left: 5%;
 }
 #product_detail_main .productShow .picShow > p {
   padding-top: 100%;
@@ -544,6 +545,7 @@ table {
   display: inline-block;
   width: 49%;
   vertical-align: top;
+  margin-top: 40px;
 }
 #product_detail_main .productShow .attrShow > h3 {
   font-size: 30px;
@@ -696,6 +698,9 @@ table {
   margin: 5px 0;
 }
 @media screen and (max-width: 414px) {
+  #product_detail_main {
+    min-width: auto;
+  }
   #product_detail_main .productShow {
     margin: 10px 0 47px 0;
   }
