--- a/public/frontend/css/pages/product_search.css
+++ b/public/frontend/css/pages/product_search.css
@@ -527,6 +527,9 @@ table {
   background-color: #E8E8E8;
 }
 @media screen and (max-width: 414px) {
+  #product_search_main {
+    min-width: auto;
+  }
   #product_search_main .product_list {
     text-align: left;
   }
