--- a/public/frontend/css/pages/support.css
+++ b/public/frontend/css/pages/support.css
@@ -668,6 +668,7 @@ input {
 }
 @media screen and (max-width: 414px) {
   #support_main {
+    min-width: 100%;
     width: 100%;
   }
   #support_main .banner-container {
