--- a/public/frontend/less/pages/home.less
+++ b/public/frontend/less/pages/home.less
@@ -22,14 +22,15 @@
   }
   .product_nav{
     width:100%;
+    text-align:center;
     margin:0 auto 40px auto;
     overflow:hidden;
     .oneProduct_nav{
-      width: 25%;
+      display:inline-block;
+      width: 22%;
       text-align:center;
-      padding-top:25%;
+      padding-top:22%;
       margin:0 10px;
-      float:left;
       overflow:hidden;
       position:relative;
       >img{
@@ -63,9 +64,13 @@
     }
     .oneProduct{
       display:inline-block;
-      width:271px;
-      height:331px;
+      width: 22%;
+      text-align:center;
+      vertical-align: top;
+      padding-top:28%;
       margin:0 12px;
+      overflow:hidden;
+      position:relative;
       &:hover{
         -webkit-transform: translateY(-4px);
         transform: translateY(-4px);
@@ -76,6 +81,9 @@
       .oneProduct_img{
         width:100%;
         height:82%;
+        position:absolute;
+        top:0;
+        left:0;
         >img{
           width:100%;
           height:100%;
@@ -88,6 +96,9 @@
         text-align:center;
         padding:10px 0 0 0;
         background-color: #E8E8E8;
+        position:absolute;
+        bottom:0;
+        left:0;
       }
     }
   }
@@ -99,34 +110,17 @@
 //响应式布局
 @media screen and (max-width: 414px) {
   #home_main{
-    //.carouselArea {
-    //  height: 150px;
-    //  img{
-    //    width:100%;
-    //  }
-    //}
+    min-width: auto;
     .product_nav{
-      width:100%;
       .oneProduct_nav{
-        width:100%;
-        height:175px;
-        margin-bottom:10px;
-        .oneProduct_nav_img,.oneProduct_nav_desc{
-          width:175px;
-          height:175px;
-        }
-        .oneProduct_nav_img{
-          box-shadow:none;
-        }
+        width: 40%;
+        padding-top:40%;
       }
     }
     .product_sell,.product_recom{
-      text-align:left;
-      .oneProduct {
-        display: inline-block;
-        width: 185px;
-        height: 230px;
-        margin: 0 2px 5px 0;
+      .oneProduct{
+        width: 40%;
+        padding-top:48%;
       }
     }
   }
