--- a/public/frontend/less/pages/login.less
+++ b/public/frontend/less/pages/login.less
@@ -136,6 +136,7 @@
 //响应式布局
 @media screen and (max-width: 414px) {
   #login_main{
+    min-width:auto;
     min-width:100%;
     height:600px;
     .login_box{
