--- a/public/frontend/css/pages/home.css
+++ b/public/frontend/css/pages/home.css
@@ -595,7 +595,7 @@ table {
   height: 18%;
   text-align: center;
   padding: 10px 0 0 0;
-  background-color: #E8E8E8;
+  background-color: #fff;
   position: absolute;
   bottom: 0;
   left: 0;
