--- a/public/frontend/less/pages/product.less
+++ b/public/frontend/less/pages/product.less
@@ -78,6 +78,7 @@
         display:inline-block;
         width:271px;
         height:331px;
+        vertical-align: top;
         margin:0 12px 10px 0;
         &:hover{
           -webkit-transform: translateY(-4px);
@@ -100,7 +101,7 @@
           height:18%;
           text-align:center;
           padding:10px 0 0 0;
-          background-color: #E8E8E8;
+          background-color: #fff;
         }
       }
     }
