--- a/public/cms/less/pages/returnMana.less
+++ b/public/cms/less/pages/returnMana.less
@@ -67,4 +67,15 @@
       }
     }
   }
+  .preview_dialog{
+    width:325px;
+    height:325px;
+    .preview_dialog_main{
+      overflow:hidden;
+      img{
+        width:100%;
+        height:100%;
+      }
+    }
+  }
 }
