--- a/public/frontend/less/pages/home.less
+++ b/public/frontend/less/pages/home.less
@@ -95,7 +95,7 @@
         height:18%;
         text-align:center;
         padding:10px 0 0 0;
-        background-color: #E8E8E8;
+        background-color: #fff;
         position:absolute;
         bottom:0;
         left:0;
