--- a/public/frontend/less/pages/home.less
+++ b/public/frontend/less/pages/home.less
@@ -92,7 +92,7 @@
       .oneProduct_desc{
         box-sizing:border-box;
         width:100%;
-        height:18%;
+        min-height:18%;
         text-align:center;
         padding:10px 0 0 0;
         background-color: #fff;
