--- a/public/frontend/less/pages/product.less
+++ b/public/frontend/less/pages/product.less
@@ -25,19 +25,20 @@
     text-align:center;
     margin:0 0 60px 0;
     .category{
+      font-size:18px;
       padding:0 97px;
-      margin:0 0 40px 0;
+      margin:0 0 48px 0;
+      background:#E8E8E8;
       .primary{
         height:35px;
         text-align:left;
-        background:#E8E8E8;
         position:relative;
         >li{
           cursor:pointer;
+          width:136px;
           height:33px;
           line-height:35px;
           text-align:center;
-          padding:0 15px;
           border-top:2px solid #E8E8E8;
           border-right:0.5px solid #fafafa;
           //margin:0 10px;
