--- a/public/frontend/less/pages/product_search.less
+++ b/public/frontend/less/pages/product_search.less
@@ -10,6 +10,7 @@
       display: inline-block;
       width:271px;
       height:331px;
+      vertical-align: top;
       margin:0 12px 10px 0;
       &:hover{
         -webkit-transform: translateY(-4px);
@@ -32,7 +33,7 @@
         height:18%;
         text-align:center;
         padding:10px 0 0 0;
-        background-color: #E8E8E8;
+        background-color: #fff;
       }
     }
   }
