--- a/public/frontend/css/common/common.css
+++ b/public/frontend/css/common/common.css
@@ -117,7 +117,12 @@
   left: 15px;
   z-index: 999;
 }
-#topBar .topBar_wap .nav .nav_img {
+#topBar .topBar_wap .nav .nav_img1 {
+  width: 20px;
+  height: 20px;
+  margin-bottom: 10px;
+}
+#topBar .topBar_wap .nav .nav_img2 {
   width: 40px;
   height: 40px;
 }
@@ -195,7 +200,7 @@
 #footer .contact {
   display: inline-block;
   color: #fff;
-  font-size: 12px;
+  font-size: 14px;
   vertical-align: top;
   float: left;
 }
@@ -203,7 +208,7 @@
 #footer .about > h4,
 #footer .support > h4,
 #footer .contact > h4 {
-  font-size: 16px;
+  font-size: 18px;
   margin: 0 0 20px 0;
 }
 #footer .subscribe {
@@ -223,7 +228,7 @@
   width: 78px;
   height: 30px;
   color: #fff;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: normal;
   padding: 0;
   border: solid 1px #989898;
@@ -288,12 +293,12 @@
 }
 #footer .contact .call > h4,
 #footer .contact .email > h4 {
-  font-size: 16px;
+  font-size: 18px;
   margin: 0 0 20px 0;
 }
 #footer .statement {
   color: #fff;
-  font-size: 16px;
+  font-size: 18px;
   text-align: center;
   clear: both;
   padding-top: 20px;
