--- a/public/frontend/css/common/reset.css
+++ b/public/frontend/css/common/reset.css
@@ -28,8 +28,8 @@ td {
   padding: 0;
 }
 body {
-  font-family: STHeitiSC!important;
-  font-size: 14px!important;
+  font-family: 微软雅黑!important;
+  font-size: 16px!important;
   font-weight: 300!important;
   color: #14181b!important;
   background-color: #fafafa!important;
