--- a/public/frontend/less/common/common.less
+++ b/public/frontend/less/common/common.less
@@ -118,7 +118,12 @@
       top:0px;
       left:15px;
       z-index:999;
-      .nav_img{
+      .nav_img1{
+        width:20px;
+        height:20px;
+        margin-bottom:10px;
+      }
+      .nav_img2{
         width:40px;
         height:40px;
       }
@@ -201,11 +206,11 @@
   .subscribe, .about, .support, .contact {
     display: inline-block;
     color: #fff;
-    font-size: 12px;
+    font-size: 14px;
     vertical-align: top;
     float:left;
     > h4 {
-      font-size: 16px;
+      font-size: 18px;
       margin: 0 0 20px 0;
     }
   }
@@ -226,7 +231,7 @@
         width: 78px;
         height: 30px;
         color: #fff;
-        font-size: 14px;
+        font-size: 16px;
         font-weight: normal;
         padding: 0;
         border: solid 1px #989898;
@@ -289,14 +294,14 @@
     .call, .email {
       margin: 0 0 40px 0;
       > h4 {
-        font-size: 16px;
+        font-size: 18px;
         margin: 0 0 20px 0;
       }
     }
   }
   .statement{
     color:#fff;
-    font-size:16px;
+    font-size:18px;
     text-align:center;
     clear:both;
     padding-top:20px;
