--- a/public/frontend/less/common/reset.less
+++ b/public/frontend/less/common/reset.less
@@ -1,8 +1,8 @@
 /*参考 淘宝官网 样式初始化*/
 body, h1, h2, h3, h4, h5, h6, hr, p, blockquote, dl, dt, dd, ul, ol, li, pre, form, fieldset, legend, button, input, textarea, th, td { margin:0; padding:0; }
 body {
-  font-family:STHeitiSC!important;
-  font-size:14px!important;
+  font-family: 微软雅黑!important;
+  font-size:16px!important;
   font-weight:300!important;
   color:#14181b!important;
   background-color:#fafafa!important;
