--- a/public/frontend/less/pages/product_detail.less
+++ b/public/frontend/less/pages/product_detail.less
@@ -53,7 +53,7 @@
     }
     .attrShow {
       display: inline-block;
-      width: 49%;
+      width: 43%;
       vertical-align: top;
       margin-top:40px;
       > h3 {
@@ -121,6 +121,7 @@
     .productDesc_header {
       height: 38px;
       line-height: 38px;
+      font-size:16px;
       color: #333333;
       background-color: #f5f5f5;
       border: solid 1px #e8e8e8;
@@ -145,6 +146,13 @@
     .imageText {
       padding:20px;
       overflow: hidden;
+      p{
+        overflow: hidden;
+        position:relative;
+      }
+      img{
+        max-width:100%;
+      }
     }
     .comment {
       padding:20px 20px 50px 20px;
