--- a/public/frontend/less/pages/support.less
+++ b/public/frontend/less/pages/support.less
@@ -8,17 +8,20 @@ input {
   min-width:1050px;
   margin: 0 auto;
   .banner-container {
-    position: relative;
     width: 100%;
-    height: 449px;
+    padding-top: percentage(449/1278);
+    position: relative;
     .img {
       width: 100%;
       height: 100%;
+      position: absolute;
+      left: 0;
+      top: 0;
     }
   }
   .service-nav {
     display: block;
-    width: 1120px;
+    //width: 1120px;
     height: 93px;
     //letter-spacing:-8px;
     list-style: none;
@@ -156,8 +159,8 @@ input {
       }
     }
     .warranty {
-      margin-top: 90px;
-      margin-bottom: 50px;
+      width:80%;
+      margin:90px auto 50px auto;
       h2 {
         text-align: center;
         font-size: 18px;
@@ -176,11 +179,7 @@ input {
 //响应式布局
 @media screen and (max-width: 414px) {
   #support_main{
-    min-width: 100%;
-    width:100%;
-    .banner-container{
-      height:200px;
-    }
+    min-width: auto;
     .service-nav{
       width:100%;
       height:60px;
@@ -193,6 +192,12 @@ input {
         p{
           margin-top: 5px;
         }
+      }
+    }
+    .module-container{
+      .warranty{
+        width:90%;
+        margin:45px auto 50px auto;
       }
     }
   }
