--- a/public/frontend/less/pages/company.less
+++ b/public/frontend/less/pages/company.less
@@ -27,8 +27,7 @@
 
 //响应式布局
 @media screen and (max-width: 414px) {
-  #contact_main{
+  #company_main{
     min-width:auto;
-    margin:10px 0 0 0;
   }
 }
