--- a/public/frontend/less/pages/product_search.less
+++ b/public/frontend/less/pages/product_search.less
@@ -47,8 +47,15 @@
       text-align:left;
       .oneProduct {
         width: 185px;
-        height: 230px;
+        height: auto;
         margin: 0 2px 5px 0;
+        .oneProduct_img{
+          height:184px;
+        }
+        .oneProduct_desc{
+          height:auto;
+          padding: 5px 0;
+        }
       }
     }
   }
