--- a/public/frontend/css/pages/home.css
+++ b/public/frontend/css/pages/home.css
@@ -597,7 +597,7 @@ table {
 #home_main .product_recom .oneProduct .oneProduct_desc {
   box-sizing: border-box;
   width: 100%;
-  min-height: 18%;
+  height: 18%;
   text-align: center;
   padding: 10px 0 0 0;
   background-color: #fff;
@@ -618,7 +618,21 @@ table {
   }
   #home_main .product_sell .oneProduct,
   #home_main .product_recom .oneProduct {
-    width: 40%;
-    padding-top: 48%;
+    width: 185px;
+    height: auto;
+    padding: 0;
+    overflow: auto;
+    position: relative;
+  }
+  #home_main .product_sell .oneProduct .oneProduct_img,
+  #home_main .product_recom .oneProduct .oneProduct_img {
+    height: 184px;
+    position: relative;
+  }
+  #home_main .product_sell .oneProduct .oneProduct_desc,
+  #home_main .product_recom .oneProduct .oneProduct_desc {
+    height: auto;
+    padding: 5px 0;
+    position: relative;
   }
 }
