--- a/public/frontend/less/pages/product.less
+++ b/public/frontend/less/pages/product.less
@@ -113,12 +113,14 @@
         .primary{
           height:30px;
           >li{
-            width:50px;
+            width:auto;
             height:28px;
             line-height:28px;
+            padding:0 5px;
             .secondary{
               height:35px;
               >li{
+                width:auto;
                 height:15px;
                 line-height:15px;
                 margin: 5px 0;
